@@ -1,16 +1,30 @@
 package com.example.configmanager.security;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import org.springframework.security.authentication.AuthenticationManager;
+
+import org.springframework.security.config.Customizer;
+
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+
+import org.springframework.security.config.http.SessionCreationPolicy;
+
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+
+import org.springframework.security.crypto.password.PasswordEncoder;
 
 import org.springframework.security.web.SecurityFilterChain;
 
 import org.springframework.web.cors.CorsConfiguration;
+
 import org.springframework.web.cors.CorsConfigurationSource;
+
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
@@ -18,14 +32,21 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(
-            HttpSecurity http
+        HttpSecurity http
     ) throws Exception {
 
         http
 
-            .cors(cors -> {})
+            .cors(Customizer.withDefaults())
 
             .csrf(csrf -> csrf.disable())
+
+            .sessionManagement(session ->
+
+                session.sessionCreationPolicy(
+                    SessionCreationPolicy.STATELESS
+                )
+            )
 
             .authorizeHttpRequests(auth ->
 
@@ -33,67 +54,79 @@ public class SecurityConfig {
 
                     .requestMatchers(
                         "/auth/**"
-                    )
-
-                    .permitAll()
+                    ).permitAll()
 
                     .requestMatchers(
                         "/search/**"
-                    )
+                    ).permitAll()
 
-                    .permitAll()
+                    .requestMatchers(
+                        "/"
+                    ).permitAll()
 
                     .anyRequest()
-
-                    .permitAll()
-            )
-
-            .httpBasic();
+                    .authenticated()
+            );
 
         return http.build();
     }
 
     @Bean
-    public CorsConfigurationSource
-    corsConfigurationSource() {
+    public PasswordEncoder passwordEncoder() {
+
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(
+        AuthenticationConfiguration config
+    ) throws Exception {
+
+        return config.getAuthenticationManager();
+    }
+
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration configuration =
-                new CorsConfiguration();
+            new CorsConfiguration();
 
         configuration.setAllowedOrigins(
+            Arrays.asList(
 
-                List.of(
-                        "http://localhost:5173"
-                )
+                "https://configura-frontend.onrender.com",
+
+                "http://localhost:5173"
+            )
         );
 
         configuration.setAllowedMethods(
+            Arrays.asList(
 
-                List.of(
-                        "GET",
-                        "POST",
-                        "PUT",
-                        "DELETE",
-                        "OPTIONS"
-                )
+                "GET",
+
+                "POST",
+
+                "PUT",
+
+                "DELETE",
+
+                "OPTIONS"
+            )
         );
 
         configuration.setAllowedHeaders(
-
-                List.of("*")
+            Arrays.asList("*")
         );
 
-        configuration.setAllowCredentials(
-                true
-        );
+        configuration.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource
-                source =
-                new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source =
+            new UrlBasedCorsConfigurationSource();
 
         source.registerCorsConfiguration(
-                "/**",
-                configuration
+            "/**",
+            configuration
         );
 
         return source;
